# soro-lens

./: mnist.pth  model.py  pyproject.toml  requirements.txt  server.py  test.py  train.py
.devcontainer/: devcontainer.json
