[tool.poetry]
name = "soro-lens"
version = "0.1.0"
description = ""
authors = ["Ding <weibing.ding@digika.jp>"]
readme = "README.md"
packages = [{include = "soro_lens"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
